--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1"
+  },
+  "dependencies": {
+    "angular-google-charts": "file:libs/angular-google-charts"
   }
 }
